[package]
name = "mimi"
version = "0.3.5"
edition = "2024"

[dependencies]
image = { version = "0.25.10", features = ["png"] }
ksni = "0.3.4"
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
nyaaan = { path = "../nyaaan" } # todo update on this
log = "0.4.32"
hidapi = "2.6.6"
imageproc = "0.27.0"
rusttype = "0.9.3"
